[project]
name = "html-mail-util"
version = "0.1.0"
description = ""
authors = [
    {name = "kecy",email = "keishiro.oyama@kecy.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
